Optimise drawing a bit and refactor

--- a/index.htm
+++ b/index.htm
@@ -7,34 +7,14 @@
     <script type="text/javascript" src="js/paper-full.min.js"></script>
     <script type="text/javascript" src="js/delaunay.js"></script>
     <script type="text/javascript">
-        function hashInts(i0, i1) {
-            return i0 < i1 ? i0.toString() + '_' + i1.toString() : i1.toString() + '_' + i0.toString();
-        }
     </script>
     <script type="text/paperscript" canvas="canvas">
         var config = {
             baseSpeed: 1.5,
             turnSpeed: 2,
-            startGap: 80
+            startGap: 80,
+            pathRes: 10
         };
-
-        function getIntersection(p0, d0, p1, d1) {
-            var ip = d0.x * d1.y - d1.x * d0.y;
-            if (ip == 0) {
-                return undefined;
-            }
-            var u = p0 - p1;
-            var s = (d0.x * u.y - d0.y * u.x) / ip;
-            var t = (d1.x * u.y - d1.y * u.x) / ip;
-            return p0 + d0 * t;
-        }
-
-        function getCircumcenter(v0, v1, v2) {
-            var d = 2 * (v0.x * (v1.y - v2.y) + v1.x * (v2.y - v0.y) + v2.x * (v0.y - v1.y));
-            var ux = ((v0.x * v0.x + v0.y * v0.y) * (v1.y - v2.y) + (v1.x * v1.x + v1.y * v1.y) * (v2.y - v0.y) + (v2.x * v2.x + v2.y * v2.y) * (v0.y - v1.y)) / d;
-            var uy = ((v0.x * v0.x + v0.y * v0.y) * (v2.x - v1.x) + (v1.x * v1.x + v1.y * v1.y) * (v0.x - v2.x) + (v2.x * v2.x + v2.y * v2.y) * (v1.x - v0.x)) / d;
-            return new Point(ux, uy);
-        }
 
         function Player(startPos, color, keyLeft, keyRight) {
             var inner = new Path.Circle({
@@ -47,7 +27,18 @@
                 radius: 20,
                 insert: false
             });
-            this.pawn = outer.subtract(inner);
+            var dot = new Path.Circle({
+                position: [0, 0],
+                radius: 5,
+                insert: false
+            });
+            var follow = new Path.Rectangle({
+                point: [-5, 0],
+                size: [10, 10],
+                insert: false
+            });
+            this.pawn = outer.subtract(inner).unite(dot).unite(follow);
+            this.pawn.pivot = [0, 0];
             this.pawn.fillColor = color;
             this.pawn.position = startPos;
             var path = new Path();
@@ -57,21 +48,91 @@
             path.strokeJoin = 'round';
             this.dirAngle = 180;
 
+            var trace = [];
+
             this.advance = function() {
                 this.pawn.position += [
                     Math.sin(this.dirAngle * Math.PI / 180) * config.baseSpeed,
                     Math.cos(this.dirAngle * Math.PI / 180) * config.baseSpeed];
                 if (Key.isDown(keyLeft)) {
                     this.dirAngle += config.turnSpeed;
+                    this.pawn.rotate(-config.turnSpeed);
                 }
                 if (Key.isDown(keyRight)) {
                     this.dirAngle -= config.turnSpeed;
+                    this.pawn.rotate(config.turnSpeed);
                 }
-                path.add(this.pawn.position);
+                if (trace.length == 0 || trace[trace.length-1].getDistance(this.pawn.position) > config.pathRes) {
+                    path.add(this.pawn.position);
+                    trace.push(this.pawn.position);
+                }
             };
         };
 
-        function Voronoi(points) {
+        function PoissonSampler(size, minimumDistance, nSamplesPerIteration) {
+            var cellSize = minimumDistance / Math.sqrt(2.0);
+            var gridSize = new Size(Math.ceil(size.width / cellSize), Math.ceil(size.height / cellSize));
+            var grid = [];
+            var computeGridIndex = function(point) {
+                return new Point(Math.floor(point.x / cellSize), Math.floor(point.y / cellSize));
+            };
+            var randomPoint = function() {
+                var t = 2.0 * Math.PI * Math.random();
+                var r = minimumDistance + Math.sqrt(Math.random()) * minimumDistance;
+                return new Point(r * Math.cos(t), r * Math.sin(t));
+            };
+
+            var result = [];
+            var activePoints = [];
+
+            // generate first point
+            {
+                var firstPoint = new Point(Math.random() * size.width, Math.random() * size.height);
+                activePoints.push(firstPoint);
+                var gridIndex = computeGridIndex(firstPoint);
+                grid[gridIndex.y * gridSize.width + gridIndex.x] = firstPoint;
+                result.push(firstPoint);
+            }
+
+            while (activePoints.length > 0) {
+                var activePointIndex = Math.floor(Math.random() * activePoints.length);
+                var point = activePoints[activePointIndex];
+                var found = false;
+                for (var i = 0; i < nSamplesPerIteration; i++) {
+                    var nextPoint = point + randomPoint();
+                    if (nextPoint.x < 0 || nextPoint.x > size.width || nextPoint.y < 0 || nextPoint.y > size.height) {
+                        continue;
+                    }
+                    var gridIndex = computeGridIndex(nextPoint);
+                    var tooClose = false;
+                    for (var x = Math.max(0, gridIndex.x - 2); x < Math.min(gridSize.width, gridIndex.x + 3) && !tooClose; x++) {
+                        for (var y = Math.max(0, gridIndex.y - 2); y < Math.min(gridSize.height, gridIndex.y + 3) && !tooClose; y++) {
+                            var index = y * gridSize.width + x;
+                            if (grid[index] != undefined && grid[index].getDistance(nextPoint) < minimumDistance) {
+                                tooClose = true;
+                            }
+                        }
+                    }
+
+                    if (!tooClose) {
+                        found |= true;
+                        activePoints.push(nextPoint);
+                        grid[gridIndex.y * gridSize.width + gridIndex.x] = nextPoint;
+                        result.push(nextPoint);
+                    }
+                }
+
+                if (!found) {
+                    activePoints.splice(activePointIndex, 1);
+                }
+            }
+
+            this.getPoints = function() {
+                return result;
+            };
+        };
+
+        function Voronoi(points,cullRect) {
             var vertices = points.map(function(p) { return [p.x, p.y]; });
             var triangles = Delaunay.triangulate(vertices);
 
@@ -95,6 +156,10 @@
                     adjFaces[i2] = [];
                 }
                 adjFaces[i2].push(i);
+            }
+
+            function hashInts(i0, i1) {
+                return i0 < i1 ? i0.toString() + '_' + i1.toString() : i1.toString() + '_' + i0.toString();
             }
 
             // build unique edges
@@ -143,6 +208,13 @@
                 adjVerts[i1].push(i0);
             }
 
+            function getCircumcenter(v0, v1, v2) {
+                var d = 2 * (v0.x * (v1.y - v2.y) + v1.x * (v2.y - v0.y) + v2.x * (v0.y - v1.y));
+                var ux = ((v0.x * v0.x + v0.y * v0.y) * (v1.y - v2.y) + (v1.x * v1.x + v1.y * v1.y) * (v2.y - v0.y) + (v2.x * v2.x + v2.y * v2.y) * (v0.y - v1.y)) / d;
+                var uy = ((v0.x * v0.x + v0.y * v0.y) * (v2.x - v1.x) + (v1.x * v1.x + v1.y * v1.y) * (v0.x - v2.x) + (v2.x * v2.x + v2.y * v2.y) * (v1.x - v0.x)) / d;
+                return new Point(ux, uy);
+            }
+
             // find circumcenters
             var ccenters = [];
             for (var i = 0; i < triangles.length / 3; i++) {
@@ -184,10 +256,19 @@
                         var vb = (b - points[i]).angle;
                         return va < vb ? -1 : ((va > vb) ? 1 : 0);
                     });
-                    var index = voronoiPolys.length;
-                    voronoiPolys.push(poly);
-                    vert2poly[i] = index;
-                    poly2vert[index] = i;
+                    var cull = false;
+                    for (var k = 0; k < poly.length; k++) {
+                        if (cullRect != undefined && !cullRect.contains(poly[k])) {
+                            cull = true;
+                            break;
+                        }
+                    }
+                    if (!cull) {
+                        var index = voronoiPolys.length;
+                        voronoiPolys.push(poly);
+                        vert2poly[i] = index;
+                        poly2vert[index] = i;
+                    }
                 }
             }
 
@@ -207,91 +288,12 @@
             };
         }
 
-        function Map(size) {
-            this.generatePoints = function(minimumDistance, nSamplesPerIteration) {
-                var cellSize = minimumDistance / Math.sqrt(2.0);
-                var gridSize = new Size(Math.ceil(size.width / cellSize), Math.ceil(size.height / cellSize));
-                var grid = [];
-                var computeGridIndex = function(point) {
-                    return new Point(Math.floor(point.x / cellSize), Math.floor(point.y / cellSize));
-                };
-                var randomPoint = function() {
-                    var t = 2.0 * Math.PI * Math.random();
-                    var r = minimumDistance + Math.sqrt(Math.random()) * minimumDistance;
-                    return new Point(r * Math.cos(t), r * Math.sin(t));
-                };
-
-                var result = [];
-                var activePoints = [];
-
-                // generate first point
-                {
-                    var firstPoint = new Point(Math.random() * size.width, Math.random() * size.height);
-                    activePoints.push(firstPoint);
-                    var gridIndex = computeGridIndex(firstPoint);
-                    grid[gridIndex.y * gridSize.width + gridIndex.x] = firstPoint;
-                    result.push(firstPoint);
-                }
-
-                while (activePoints.length > 0) {
-                    var activePointIndex = Math.floor(Math.random() * activePoints.length);
-                    var point = activePoints[activePointIndex];
-                    var found = false;
-                    for (var i = 0; i < nSamplesPerIteration; i++) {
-                        var nextPoint = point + randomPoint();
-                        if (nextPoint.x < 0 || nextPoint.x > size.width || nextPoint.y < 0 || nextPoint.y > size.height) {
-                            continue;
-                        }
-                        var gridIndex = computeGridIndex(nextPoint);
-                        var tooClose = false;
-                        for (var x = Math.max(0, gridIndex.x - 2); x < Math.min(gridSize.width, gridIndex.x + 3) && !tooClose; x++) {
-                            for (var y = Math.max(0, gridIndex.y - 2); y < Math.min(gridSize.height, gridIndex.y + 3) && !tooClose; y++) {
-                                var index = y * gridSize.width + x;
-                                if (grid[index] != undefined && grid[index].getDistance(nextPoint) < minimumDistance) {
-                                    tooClose = true;
-                                }
-                            }
-                        }
-
-                        if (!tooClose) {
-                            found |= true;
-                            activePoints.push(nextPoint);
-                            grid[gridIndex.y * gridSize.width + gridIndex.x] = nextPoint;
-                            result.push(nextPoint);
-                        }
-                    }
-
-                    if (!found) {
-                        activePoints.splice(activePointIndex, 1);
-                    }
-                }
-
-                return result;
-            };
-        };
-
         view.center = [0, 0];
 
         var minDist = 40;
         var mapSize = new Size(1000, 2000);
-        var map = new Map(mapSize);
-        var points = map.generatePoints(minDist, 10);
-        var voronoi = new Voronoi(points);
-
-        // var debug = [347.7261994034052, 137.704567797482, 210.9421964985903, 73.03803734290695, 239.85698237677906, 249.20378882018804, 333.8827709489882, 10.278198792623542, 363.9630312899947, 279.3360611607525, 90.61642445991896, 286.9773433890435, 125.04208545573887, 206.65241787308446, 5.8692692214565625, 129.40581370647755, 93.745825230287, 8.047227332069852];
-        // points = [];
-        // for (var i = 0; i < debug.length / 2; i++) {
-        //     points.push(new Point(debug[i * 2 + 0], debug[i * 2 + 1]));
-        // }
-        // var test = [];
-        // for (var i = 0; i < points.length; i++) {
-        //     test.push(points[i].x);
-        //     test.push(points[i].y);
-        // }
-        // console.log(test);
-
-        // var bg = new Path.Rectangle(-mapSize / 2, mapSize);
-        // bg.fillColor = '#cccccc';
+        var poisson = new PoissonSampler(mapSize, minDist, 10);
+        var voronoi = new Voronoi(poisson.getPoints(), new Rectangle(new Point(0, 0), mapSize));
 
         var polys = voronoi.getPolys();
         var paths = [];
@@ -307,46 +309,18 @@
             path.remove();
         }
 
-        // for (var i = 0; i < points.length; i++) {
-        //     var c = new Path.Circle({
-        //         position: points[i] - mapSize / 2,
-        //         radius: 2
-        //     });
-        //     c.fillColor = '#000000';
-        // }
-
         var p1 = new Player([-config.startGap / 2, 0], '#ff0000', 's', 'd');
         var p2 = new Player([+config.startGap / 2, 0], '#0000ff', 'left', 'right');
-
-        var mousePos = view.center;
 
         function onFrame(event) {
             p1.advance();
             p2.advance();
             view.center = [0, Math.min(p1.pawn.position.y, p2.pawn.position.y)];
-
-            for (var i = 0; i < paths.length; i++) {
-                paths[i].fillColor = '#00cc00';
-            }
-            for (var i = 0; i < paths.length; i++) {
-                var hit = paths[i].hitTest(mousePos, {fill:true});
-                if (hit) {
-                    paths[i].fillColor = '#cc0000';
-                    var adj = voronoi.getAdjacentPolys(i);
-                    for (var j = 0; j < adj.length; j++) {
-                        paths[adj[j]].fillColor = '#ffff00';
-                    }
-                }
-            }
-        }
-
-        function onMouseMove(event) {
-            mousePos = event.point;
         }
     </script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <div id="footer"><b>DEMARCATION</b> &mdash; <span style="color:#f00;"><b>Player 1</b></span> Use <b>S</b> and <b>D</b>. <span style="color:#00f;"><b>Player 2</b></span> Use <b>&#8592;</b> and <b>&#8594;</b>. Made with the amazing <a href="http://paperjs.org">Paper.js</a>.</div>
+    <div id="footer"><b>DEMARCATION</b> &mdash; <span style="color:#f00;"><b>Player 1</b></span> Use <b>S</b> and <b>D</b>. <span style="color:#00f;"><b>Player 2</b></span> Use <b>&#8592;</b> and <b>&#8594;</b>. Made with <a href="http://paperjs.org">Paper.js</a>.</div>
 </body>
 </html>
